Landmark. Figured out a few things about dynamic paging

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -201,6 +201,14 @@ main {
 
         }
     }
+
+    &:hover {
+      @apply 
+      scale-[1.03] border;
+      background: #44c99430;
+
+     
+    }
 }
 
 
