--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,215 +1,215 @@
-//partials
-@import './resets';
-@import './colors';
+// //partials
+// @import './resets';
+// @import './colors';
 
-* {
-    font-family: 'Manrope', sans-serif;
-}
-button {
-    border: none;
-}
-@mixin showAll {
-    * {
-        border: 1px solid black
-    }
-}
-.centered_inner {
-    @apply 
-    w-[77%] m-auto
-}
-
-
-// =========== CONTAINER ELEMENT
-.base {
-    // @include showAll();
-    @apply w-full min-w-max h-max;
-    background: $grey;
-}
-
-// ============== HEADER
-header {
-    @apply 
-    m-auto 
-    w-full h-max 
-    bg-black fixed;
-
-    & > div {
-        @apply max-w-[1024px] m-auto 
-        flex justify-between items-center;
-        background: $grey3;
-
-        @apply
-        lg:bg-black
-    }
-}
-
-.ham-burger {  
-    @apply w-max h-max;
-    background: $grey1;
-
-    button {
-        @apply px-[25px] py-[27px]
-    }
-}
-
-.page-logo {
-    @apply w-[23%] max-w-[107.64px] mr-[18px]
-}
+// * {
+//     font-family: 'Manrope', sans-serif;
+// }
+// button {
+//     border: none;
+// }
+// @mixin showAll {
+//     * {
+//         border: 1px solid black
+//     }
+// }
+// .centered_inner {
+//     @apply 
+//     w-[77%] m-auto
+// }
 
 
-// ========== MAIN PAGE CONTENT
-main {
-    @apply w-[1024px]
-    m-auto pt-[66px];
+// // =========== CONTAINER ELEMENT
+// .base {
+//     // @include showAll();
+//     @apply w-full min-w-max h-max;
+//     background: $grey;
+// }
 
-}
+// // ============== HEADER
+// header {
+//     @apply 
+//     m-auto 
+//     w-full h-max 
+//     bg-black fixed;
 
-.title-bar {
-    @apply 
-    text-white font-normal 
-    pb-[9.13px] pt-[34px]
-    bg-black
+//     & > div {
+//         @apply max-w-[1024px] m-auto 
+//         flex justify-between items-center;
+//         background: $grey3;
 
-    lg:pt-[57px];
+//         @apply
+//         lg:bg-black
+//     }
+// }
 
-    .centered_inner {
-        @apply flex justify-between;
+// .ham-burger {  
+//     @apply w-max h-max;
+//     background: $grey1;
 
-        & > div {
-            //'name' title
-            &:first-child {
-                @apply
-                flex items-center
-                w-[20%]
-            }
+//     button {
+//         @apply px-[25px] py-[27px]
+//     }
+// }
+
+// .page-logo {
+//     @apply w-[23%] max-w-[107.64px] mr-[18px]
+// }
+
+
+// // ========== MAIN PAGE CONTENT
+// main {
+//     @apply w-[1024px]
+//     m-auto pt-[66px];
+
+// }
+
+// .title-bar {
+//     @apply 
+//     text-white font-normal 
+//     pb-[9.13px] pt-[34px]
+//     bg-black
+
+//     lg:pt-[57px];
+
+//     .centered_inner {
+//         @apply flex justify-between;
+
+//         & > div {
+//             //'name' title
+//             &:first-child {
+//                 @apply
+//                 flex items-center
+//                 w-[20%]
+//             }
     
-            // other titles
-            &:nth-child(2) {
-                @apply
-                flex w-max
-            }
-        }
-    }
+//             // other titles
+//             &:nth-child(2) {
+//                 @apply
+//                 flex w-max
+//             }
+//         }
+//     }
 
-    ul {
-        @apply 
-        flex content-between;
+//     ul {
+//         @apply 
+//         flex content-between;
 
-        li {
-            @apply 
-            flex items-center 
-            inline-block h-7 text-xs;
-            border-right: 1px solid #606060;
+//         li {
+//             @apply 
+//             flex items-center 
+//             inline-block h-7 text-xs;
+//             border-right: 1px solid #606060;
 
-            img {
-                max-width: unset; 
-                //tailwind is shrinking the images for some resason, no time to figure it out so I overrode it
-            }
+//             img {
+//                 max-width: unset; 
+//                 //tailwind is shrinking the images for some resason, no time to figure it out so I overrode it
+//             }
 
-            &:not(:first-child) {
-                @apply px-[14px]
-            }
+//             &:not(:first-child) {
+//                 @apply px-[14px]
+//             }
 
-            &:first-child {
-                @apply 
-                pr-[14px]
-            }
-        }
-    }
+//             &:first-child {
+//                 @apply 
+//                 pr-[14px]
+//             }
+//         }
+//     }
 
-    &__controls {
-        @apply 
-        flex flex-col 
-        ml-[4px] text-xs
+//     &__controls {
+//         @apply 
+//         flex flex-col 
+//         ml-[4px] text-xs
 
 
-    }
-}
+//     }
+// }
 
-.player-stats-bar {
-    @apply 
-    text-white font-normal 
-    py-[12px]
-    border-b border-black;
-    background: $grey2;
+// .player-stats-bar {
+//     @apply 
+//     text-white font-normal 
+//     py-[12px]
+//     border-b border-black;
+//     background: $grey2;
 
-    .centered_inner {
-        @apply flex justify-between;
+//     .centered_inner {
+//         @apply flex justify-between;
 
-        & > div {
-            //player name
-            &:first-child {
-                @apply
-                flex items-center
-                text-[10px] w-1/5
-                font-bold
-            }
+//         & > div {
+//             //player name
+//             &:first-child {
+//                 @apply
+//                 flex items-center
+//                 text-[10px] w-1/5
+//                 font-bold
+//             }
     
-            // player attributes
-            &:nth-child(2) {
-                @apply
-                flex justify-between
-                w-max text-xs
-            }
-        }
-    }
+//             // player attributes
+//             &:nth-child(2) {
+//                 @apply
+//                 flex justify-between
+//                 w-max text-xs
+//             }
+//         }
+//     }
 
-    ul {
-        @apply 
-        flex;
+//     ul {
+//         @apply 
+//         flex;
 
-        li {
-            @apply 
-            flex items-center justify-center
-            inline-block h-7
-            text-xs font-bold
-            rounded mr-[7px] ml-[11px]
-            w-[46px] py-2;
+//         li {
+//             @apply 
+//             flex items-center justify-center
+//             inline-block h-7
+//             text-xs font-bold
+//             rounded mr-[7px] ml-[11px]
+//             w-[46px] py-2;
         
 
-            img {
-                max-width: unset; 
-                //tailwind is shrinking the images for some resason, no time to figure it out so I overrode it
-            }
+//             img {
+//                 max-width: unset; 
+//                 //tailwind is shrinking the images for some resason, no time to figure it out so I overrode it
+//             }
 
-            &:not(:first-child) {
-                @apply px-[14px]
-            }
+//             &:not(:first-child) {
+//                 @apply px-[14px]
+//             }
           
 
-            &:first-child {
-                @apply bg-white text-black
-            }
+//             &:first-child {
+//                 @apply bg-white text-black
+//             }
 
-            &:nth-child(2), 
-            &:nth-child(3),
-            &:nth-child(10) {
-                @apply bg-black text-white
-            }
+//             &:nth-child(2), 
+//             &:nth-child(3),
+//             &:nth-child(10) {
+//                 @apply bg-black text-white
+//             }
 
-            &:nth-child(4),
-            &:nth-child(5),
-            &:nth-child(6),
-            &:nth-child(7),
-            &:nth-child(8),
-            &:nth-child(9) {
-                @apply 
-                bg-black
-                border border-white
-                rounded
-            }
+//             &:nth-child(4),
+//             &:nth-child(5),
+//             &:nth-child(6),
+//             &:nth-child(7),
+//             &:nth-child(8),
+//             &:nth-child(9) {
+//                 @apply 
+//                 bg-black
+//                 border border-white
+//                 rounded
+//             }
 
-        }
-    }
+//         }
+//     }
 
-    &:hover {
-      @apply 
-      scale-[1.03] border;
-      background: #44c99430;
+//     &:hover {
+//       @apply 
+//       scale-[1.03] border;
+//       background: #44c99430;
 
      
-    }
-}
+//     }
+// }
 
 
   
